# Amphion

./: .gitattributes  .gitignore  CAPABILITY_INVENTORY.md  COMMERCIAL.md  CONTRACTS.md  Cargo.toml  DEVELOPMENT_STATUS.md  EXECUTION_PLAN.md  PRODUCT_PLAN.md  README.md  STEP_SCOPE.md  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/foundation/: Cargo.toml
crates/foundation/src/: bounds.rs  conventions.rs  diagnostic.rs  identity.rs  interval.rs  lib.rs  math.rs  predicates.rs  tolerance.rs  unit.rs  version.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: domain.rs  error.rs  evaluation.rs  id.rs  kind.rs  lib.rs  traits.rs
crates/geometry/src/analytic/: circle.rs  cone.rs  cylinder.rs  error.rs  exact.rs  helpers.rs  line.rs  mod.rs  plane.rs  transform.rs  trig.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: corpus.rs  distribution.rs  fuzz.rs  lib.rs  oracle.rs  report.rs  rng.rs  runner.rs
crates/test-support/tests/: self_tests.rs
crates/topology/: Cargo.toml
crates/topology/src/: arena.rs  builder.rs  entity.rs  error.rs  euler.rs  id.rs  lib.rs  orientation.rs  provenance.rs  reference.rs  store.rs  tests.rs  traversal.rs
crates/topology/tests/: topology_tests.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs
qa/: README.md
qa/corpus/: SCHEMA.md
qa/fuzz/: README.md
