[workspace]
resolver = "3"
members = [
    "crates/foundation",
    "crates/geometry",
    "crates/topology",
    "crates/validation",
    "crates/test-support",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
