[package]
name = "amphion-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
amphion-foundation = { path = "../foundation" }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
