[package]
name = "amphion-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
amphion-foundation = { path = "../foundation" }
amphion-geometry = { path = "../geometry" }
amphion-topology = { path = "../topology" }
amphion-validation = { path = "../validation" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
