[package]
name = "amphion-topology"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
amphion-foundation = { path = "../foundation" }
amphion-geometry = { path = "../geometry" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
